cmake_minimum_required(VERSION 3.10)


# Create client library
add_clio_module_client(
  LIB_NAME clio_MOD_NAME
  SOURCES
    src/MOD_NAME_client.cc
  INCLUDE_DIRECTORIES
    ${CLIO_RUN_ROOT}/modules/admin/include  # MOD_NAME needs admin headers
)

# Create runtime library
add_clio_module_runtime(
  LIB_NAME clio_MOD_NAME
  SOURCES
    src/MOD_NAME_runtime.cc
    src/autogen/MOD_NAME_lib_exec.cc
  INCLUDE_DIRECTORIES
    ${CLIO_RUN_ROOT}/modules/admin/include  # MOD_NAME needs admin headers
)

# Add unit tests subdirectory
if(CLIO_CORE_ENABLE_TESTS)
  add_subdirectory(test)
endif()